bynkc/tests/fixtures/positive/61_uses_with_methods/src/base/main.karn
commons base

type Count = Int where NonNegative

fn Count.successor(self) -> Result[Count, ValidationError] {
  Count.of(self + 1)
}
